Enhance project contributors page and layout with new components and translations  - Added ContributorsTable component to the Project Contributors page for better display of contributor data. - Updated layout.tsx to improve styling and structure of the project overview section. - Introduced new translation keys for contributors in project-details.en.json. - Exported new query hook for fetching project contributors in the project client adapter. - Updated project contract types to include query parameters for contributors. - Enhanced Metric component to accept customizable icon sizes.  These changes improve the user experience by providing clearer contributor information and enhancing the overall layout.

--- a/app/projects/_translations/project-details.en.json
+++ b/app/projects/_translations/project-details.en.json
@@ -21,5 +21,17 @@
     "description": {
       "title": "Description"
     }
+  },
+  "contributors": {
+    "columns": {
+      "from": "From",
+      "rewards": "Rewards",
+      "mergedPr": "Merged PR",
+      "rewardAmount": "Reward Amount"
+    },
+    "filters": {
+      "columnList": "Columns"
+    },
+    "contributorsCount": "Contributors"
   }
 }
