Implement rewards feature in Project Rewards Page  - Added RewardsTable component to display project rewards. - Updated translations in project-details.en.json to include new keys for rewards. - Exported new query hook for fetching project rewards in the project client adapter. - Modified project contract types to expose query parameters for rewards.  These changes enhance the project rewards functionality and improve the user experience by providing a structured view of rewards data.

--- a/app/projects/_translations/project-details.en.json
+++ b/app/projects/_translations/project-details.en.json
@@ -33,5 +33,18 @@
       "columnList": "Columns"
     },
     "contributorsCount": "Contributors"
+  },
+  "rewards": {
+    "columns": {
+      "date": "Date",
+      "from": "From",
+      "to": "To",
+      "contributions": "Contributions",
+      "amount": "Amount"
+    },
+    "filters": {
+      "columnList": "Columns"
+    },
+    "rewardsCount": "Rewards"
   }
 }
