Contributors + Rewards + Open Issues (#837)

--- a/app/projects/_translations/project-details.en.json
+++ b/app/projects/_translations/project-details.en.json
@@ -13,13 +13,41 @@
   },
   "overview": {
     "stats": {
-      "contributors": "Contributors",
-      "prMerged": "PR Merged",
+      "contributors": "Active Contributors",
+      "prMerged": "Merged Pull Requests",
       "stars": "Stars",
-      "issues": "Open Issues"
+      "issues": "Available Issues"
     },
     "description": {
       "title": "Description"
     }
+  },
+  "contributors": {
+    "columns": {
+      "from": "From",
+      "rewards": "Rewards",
+      "mergedPr": "Merged PR",
+      "rewardAmount": "Reward Amount"
+    },
+    "filters": {
+      "columnList": "Columns"
+    },
+    "contributorsCount": "Contributors"
+  },
+  "rewards": {
+    "columns": {
+      "date": "Date",
+      "from": "From",
+      "to": "To",
+      "contributions": "Contributions",
+      "amount": "Amount"
+    },
+    "filters": {
+      "columnList": "Columns"
+    },
+    "rewardsCount": "Rewards"
+  },
+  "issues": {
+    "issuesCount": "Issues"
   }
 }
