--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i18next": "^23.12.2",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.429.0",
+    "markdown-it": "^14.1.0",
     "next": "14.2.5",
     "posthog-js": "^1.154.5",
     "react": "^18",
@@ -74,6 +75,7 @@
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@testing-library/react": "^16.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.1.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
