--- a/shared/panels/apply-issue-sidepanel/_translations/apply-issue-sidepanel.en.json
+++ b/shared/panels/apply-issue-sidepanel/_translations/apply-issue-sidepanel.en.json
@@ -6,7 +6,8 @@
     "days": "{{count}} Days"
   },
   "summary": {
-    "title": "Description"
+    "title": "Description",
+    "by": "By"
   },
   "apply": {
     "title": "My applications",
