--- a/app/projects/_translations/project-details.en.json
+++ b/app/projects/_translations/project-details.en.json
@@ -24,7 +24,7 @@
   },
   "contributors": {
     "columns": {
-      "from": "From",
+      "name": "Name",
       "rewards": "Rewards",
       "mergedPr": "Merged PR",
       "rewardAmount": "Reward Amount"
