Add description to contributors table and clean up filter column formatting

--- a/app/projects/_translations/project-details.en.json
+++ b/app/projects/_translations/project-details.en.json
@@ -23,6 +23,7 @@
     }
   },
   "contributors": {
+    "description": "The following KPIs relate to contributions in this project.",
     "columns": {
       "name": "Name",
       "rewards": "Rewards",
