feat: add repository display to project overview card  - Updated ProjectOverviewSummary to include repositories in the project details. - Enhanced CardProjectOverview types to support repositories. - Added translation for 'repos' in the project overview card. - Implemented rendering of repositories in the CardProjectOverviewDefaultAdapter.  This update improves the visibility of project repositories, enhancing user experience.

--- a/design-system/molecules/cards/card-project-overview/_translations/card-project-overview.en.json
+++ b/design-system/molecules/cards/card-project-overview/_translations/card-project-overview.en.json
@@ -1,5 +1,6 @@
 {
   "description": "Description",
   "languages": "Languages",
-  "socials": "Socials"
+  "socials": "Socials",
+  "repos": "Repos"
 }
