--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-pdf/renderer": "^3.3.8",
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-table": "^8.20.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
@@ -51,8 +52,9 @@
     "react-use": "^17.5.1",
     "remixicon": "^4.3.0",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
