--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@hookform/resolvers": "^3.9.0",
     "@intercom/messenger-js-sdk": "^0.0.14",
     "@nextui-org/react": "0.0.0-canary-20241019165916",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-pdf/renderer": "^3.3.8",
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-table": "^8.20.1",
@@ -33,6 +35,9 @@
     "cmdk": "^1.0.4",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-fade": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.3.24",
     "franc": "^6.2.0",
     "highcharts": "^11.4.8",
