--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@fillout/react": "^1.1.2",
     "@floating-ui/react": "^0.26.23",
     "@highcharts/map-collection": "^2.3.0",
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.10.0",
     "@intercom/messenger-js-sdk": "^0.0.14",
     "@nextui-org/react": "0.0.0-canary-20241019165916",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-pdf/renderer": "^3.3.8",
     "@tanstack/react-query": "^5.51.21",
@@ -52,7 +54,7 @@
     "react-dom": "^18",
     "react-emoji-render": "^2.0.1",
     "react-flagpack": "^2.0.5",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.0.0",
     "react-intersection-observer": "^9.13.0",
     "react-pdf": "7.7.1",
@@ -62,7 +64,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@inquirer/prompts": "^5.3.8",
