--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@floating-ui/react": "^0.26.23",
     "@highcharts/map-collection": "^2.3.0",
     "@hookform/resolvers": "^3.9.0",
+    "@intercom/messenger-js-sdk": "^0.0.14",
     "@nextui-org/react": "0.0.0-canary-20241019165916",
     "@react-pdf/renderer": "^3.3.8",
     "@tanstack/react-query": "^5.51.21",
@@ -30,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.3.24",
     "franc": "^6.2.0",
