--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.429.0",
     "markdown-it": "^14.1.0",
     "next": "14.2.5",
+    "next-themes": "^0.4.4",
     "posthog-js": "^1.154.5",
     "react": "^18",
     "react-dom": "^18",
@@ -60,7 +61,7 @@
     "react-pdf": "7.7.1",
     "react-use": "^17.5.1",
     "remixicon": "^4.3.0",
-    "sonner": "^1.5.0",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
