--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@intercom/messenger-js-sdk": "^0.0.14",
     "@nextui-org/react": "0.0.0-canary-20241019165916",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
