--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@react-pdf/renderer": "^3.3.8",
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-table": "^8.20.1",
