--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@auth0/auth0-react": "^2.2.4",
     "@fillout/react": "^1.1.2",
     "@floating-ui/react": "^0.26.23",
+    "@headlessui/react": "^1.7.17",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@highcharts/map-collection": "^2.3.0",
     "@hookform/resolvers": "^3.10.0",
     "@intercom/messenger-js-sdk": "^0.0.14",
@@ -64,9 +66,11 @@
     "react-emoji-render": "^2.0.1",
     "react-flagpack": "^2.0.5",
     "react-hook-form": "^7.54.2",
+    "react-hotkeys-hook": "^4.6.1",
     "react-i18next": "^15.0.0",
     "react-intersection-observer": "^9.13.0",
     "react-pdf": "7.7.1",
+    "react-tooltip": "^5.28.0",
     "react-use": "^17.5.1",
     "remixicon": "^4.3.0",
     "sonner": "^1.7.2",
