--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@intercom/messenger-js-sdk": "^0.0.14",
     "@nextui-org/react": "0.0.0-canary-20241019165916",
     "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
