Add Sumsub KYC/KYB integration with environment configuration

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,13 @@ NEXT_PUBLIC_GITHUB_PUBLIC_REPO_SCOPE=
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
 
-
 ######################################## Local Mock ########################################
 
 NEXT_PUBLIC_ONLYDUST_API_MOCK_BASEPATH=localhost:3100
+
+######################################## SUMSUB ########################################
+
+SUMSUB_SDK_APP_TOKEN=
+SUMSUB_SDK_SECRET_KEY=
+NEXT_PUBLIC_SUMSUB_KYC_LEVEL=
+NEXT_PUBLIC_SUMSUB_KYB_LEVEL=
