--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-pdf/renderer": "^3.3.8",
+    "@sumsub/websdk-react": "^2.3.12",
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-table": "^8.20.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
