--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
     "i18next": "^23.12.2",
+    "iban": "^0.0.14",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.429.0",
     "markdown-it": "^14.1.0",
@@ -98,6 +99,7 @@
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@testing-library/react": "^16.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/iban": "^0.0.35",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.1.0",
     "@types/react": "^18",
