--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ SUMSUB_SDK_APP_TOKEN=
 SUMSUB_SDK_SECRET_KEY=
 NEXT_PUBLIC_SUMSUB_KYC_LEVEL=
 NEXT_PUBLIC_SUMSUB_KYB_LEVEL=
+
+######################################## FILLOUT ########################################
+
+FILLOUT_API_KEY=
