--- a/app/(saas)/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
+++ b/app/(saas)/manage-projects/[projectSlug]/_translations/manage-project-detail.en.json
@@ -1,5 +1,6 @@
 {
   "views": {
+    "dashboard": "Dashboard",
     "contributors": "Contributors",
     "contributions": "Contributions",
     "financial": "Financial"
