--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@sumsub/websdk-react": "^2.3.12",
     "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-table": "^8.20.1",
+    "@uiw/react-md-editor": "^4.0.5",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
