--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "i18next": "^23.12.2",
     "iban": "^0.0.14",
     "keen-slider": "^6.8.6",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.429.0",
     "markdown-it": "^14.1.0",
     "next": "14.2.5",
@@ -108,6 +109,7 @@
     "@testing-library/react": "^16.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/iban": "^0.0.35",
+    "@types/lodash-es": "^4.17.12",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.1.0",
     "@types/react": "^18",
