--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.429.0",
     "markdown-it": "^14.1.0",
-    "next": "14.2.5",
+    "next": "^14.2.25",
     "next-themes": "^0.4.4",
     "posthog-js": "^1.154.5",
     "react": "^18",
