--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.0.0",
     "react-intersection-observer": "^9.13.0",
-    "react-pdf": "7.7.1",
+    "react-pdf": "^9.2.1",
     "react-use": "^17.5.1",
     "remixicon": "^4.3.0",
     "sonner": "^1.7.2",
